(lang dune 3.4)

(generate_opam_files true)

(name taype-driver-plaintext-legacy)
(license "MIT")
(maintainers "Qianchuan Ye <yeqianchuan@gmail.com>")
(authors "Qianchuan Ye")
(source (github ccyip/taype-driver-plaintext))

(package
 (name taype-driver-plaintext-legacy)
 (synopsis "Plaintext driver (legacy) for the Taype language")
)
